generated/nixidy/prod/actual/Deployment-actual.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: actual
    app.kubernetes.io/instance: actual
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: actual
  name: actual
  namespace: dotfiles
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: actual
      app.kubernetes.io/instance: actual
      app.kubernetes.io/name: actual
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: b2ffb0199371005dcb809d31b7bea809a67b7fef559578487561be4faa24e072
      labels:
        app.kubernetes.io/controller: actual
        app.kubernetes.io/instance: actual
        app.kubernetes.io/name: actual
    spec:
      automountServiceAccountToken: true
      containers:
        - envFrom:
            - configMapRef:
                name: actual
          image: ghcr.io/actualbudget/actual-server:25.7.1
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 5006
            timeoutSeconds: 1
          name: actual
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 5006
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 5006
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actual
