generated/nixidy/prod/actual/Service-actual.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: actual
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: actual
    app.kubernetes.io/service: actual
  name: actual
  namespace: dotfiles
spec:
  ports:
    - name: http
      port: 5006
      protocol: TCP
      targetPort: 5006
  selector:
    app.kubernetes.io/controller: actual
    app.kubernetes.io/instance: actual
    app.kubernetes.io/name: actual
  type: ClusterIP
