generated/nixidy/prod/actual/HTTPRoute-actual.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: actual
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: actual
  name: actual
  namespace: dotfiles
spec:
  hostnames:
    - actual.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: actual
          namespace: dotfiles
          port: 5006
          weight: 1
